--- a/src/app.html
+++ b/src/app.html
@@ -3,10 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<link
-			href="https://api.fontshare.com/v2/css?f[]=chillax@1&f[]=satoshi@1,2&f[]=outfit@1&f[]=epilogue@2,1&f[]=quicksand@1&display=swap"
-			rel="stylesheet"
-		/>
+		<link href="https://api.fontshare.com/v2/css?f[]=satoshi@1,2&display=swap" rel="stylesheet" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
